--- a/fly.toml
+++ b/fly.toml
@@ -1,1 +1,24 @@
+app = "psycoagenda"  # Cambia esto por el nombre de tu app en Fly
+
+[build]
+  # Si usas Dockerfile, indicá que se use la imagen local
+  dockerfile = "Dockerfile"
+
+[env]
+  PORT = "8080"
+
+[experimental]
+  allowed_public_ports = [8080]
+  auto_rollback = true
+
+[services]
+  [[services.http]]
+    internal_port = 8080
+    protocols = ["http"]
+
+    [[services.http.tcp_checks]]
+      interval = 10000
+      timeout = 2000
+      grace_period = "5s"
+      restart_limit = 0
 
